<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="at.area23.schnapsen.MainActivity">
    <item
        android:id="@+id/action_start"
        android:orderInCategory="100"
        android:title="@string/action_start"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_stop"
        android:orderInCategory="200"
        android:title="@string/action_stop"
        android:enabled="true"
        app:showAsAction="never" />

    <group android:menuCategory="secondary"
        android:id="@+id/group_carddeck"
        android:visible="true">
        <item
            android:id="@+id/action_carddeck"
            android:orderInCategory="1000"
            android:title="@string/carddeck"
            app:showAsAction="collapseActionView">

            <menu>
                <item
                    android:id="@+id/action_default_cards"
                    android:orderInCategory="1100"
                    android:title="@string/default_cards"
                    android:checkable="true"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_english_cards"
                    android:orderInCategory="1200"
                    android:title="@string/english_cards"
                    android:checkable="true"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_german_cards"
                    android:orderInCategory="1300"
                    android:title="@string/german_cards"
                    android:checkable="true"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_french_cards"
                    android:orderInCategory="1400"
                    android:title="@string/french_cards"
                    android:checkable="true"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_ukraine_cards"
                    android:orderInCategory="1500"
                    android:title="@string/ukraine_cards"
                    android:checkable="true"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_polish_cards"
                    android:orderInCategory="1600"
                    android:title="@string/polish_cards"
                    android:checkable="true"
                    app:showAsAction="never" />
            </menu>
        </item>
    </group>
    <group android:menuCategory="secondary"
        android:id="@+id/group_about"
        android:visible="true">
        <item
            android:id="@+id/action_help"
            android:orderInCategory="2100"
            android:title="@string/action_help"
            android:enabled="true"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_about"
            android:orderInCategory="2200"
            android:title="@string/action_about"
            android:enabled="true"
            app:showAsAction="never" />
    </group>
</menu>
